# python_serial_recorder

./: README.md  main.py  pyproject.toml  requirements.txt
ADC_ttgo-t-display/: ADC_ttgo-t-display.ino
helpful_notes/: flowchart_classdiagram.md
setup_scripts/: helper_functions.py  setup_functions.py
