[project]
name = "python-serial-recorder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "darkdetect>=0.8.0",
    "matplotlib>=3.10.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyserial>=3.5",
    "pyside6>=6.10.0",
]
